<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.codemaven3015.onistayandroiddev.OniCredits">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_collapseMode="pin"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp">

        <include
            layout="@layout/tool_bar" />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="70dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/offer_onicredit"
                android:textSize="@dimen/mediumFont" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_balance"
                    android:textSize="@dimen/mediumFont"/>
                <TextView
                    android:id="@+id/oniAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:text=" ₹200"
                    android:textSize="@dimen/mediumFont" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="Transaction History"
                android:textColor="@color/red"
                android:textSize="@dimen/largeFont" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Booking Confirmed"
                    android:textSize="@dimen/mediumFont"/>
                <TextView
                    android:id="@+id/cnfirmBookingDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:text=" Feb20th,2018"
                    android:textSize="@dimen/mediumFont" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Booking ID"
                    android:textSize="@dimen/mediumFont" />
                <TextView
                    android:id="@+id/booking_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="110dp"
                    android:text=" MG125"
                    android:textSize="@dimen/mediumFont" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            android:layout_marginTop="80dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="Please Note"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="@dimen/largeFont" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Please_read1"
            android:textSize="@dimen/mediumFont"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Please_read2"
            android:textSize="@dimen/mediumFont"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Please_read3"
            android:textSize="@dimen/mediumFont"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>