<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/tools"
    tools:context="com.example.codemaven3015.onistayandroiddev.Tabbed_CardLayout">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
        android:id="@+id/tabbedCardView_cardview"
        card_view:cardBackgroundColor="#f7f7f7"
        card_view:cardCornerRadius="12dp"
        card_view:cardElevation="3dp"
        card_view:contentPadding="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:clickable="true">

        <LinearLayout
            android:id="@+id/tabbed_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cityName_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="NOIDA"
                android:textAlignment="center"
                android:textSize="@dimen/smallFontL" />

            <ImageView
                android:id="@+id/hotel_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"/>


            <TextView
                android:id="@+id/address_textView"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_marginTop="10dp"
                android:text="@string/hotel_address"
                android:textAlignment="center"
                android:textSize="@dimen/smallFontL" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp">

                <TextView
                    android:id="@+id/date_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/booked_date"
                    android:textSize="@dimen/smallFontL" />

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@color/grey"
                    android:text="IN"
                    android:textAlignment="center"
                    android:textSize="@dimen/smallFontL" />

                <TextView
                    android:id="@+id/bookingDate_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/date"
                    android:textSize="@dimen/smallFontL" />


            </LinearLayout>

            <Button
                android:id="@+id/book_btn"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@color/transparent"
                android:text="Book Again"
                android:textColor="@color/red_trans"
                android:textSize="@dimen/smallFontL" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
