<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.codemaven3015.onistayandroiddev.PayNow">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_collapseMode="pin"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp">

        <include
            layout="@layout/tool_bar" />
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    app:srcCompat="@drawable/sucess" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/booking_confirmation"
                    android:textAlignment="center"
                    android:textSize="@dimen/mediumFont" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="20dp"
                        android:text="@string/order_Id"
                        android:textAlignment="center"
                        android:textSize="@dimen/mediumFont" />

                    <TextView
                        android:id="@+id/oder_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:paddingBottom="20dp"
                        android:text="xyz123"
                        android:textAlignment="center"
                        android:textSize="@dimen/mediumFont" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/room_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"

                android:scaleType="fitXY"
                app:srcCompat="@drawable/hotel8" />
            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hotel_Name"
                android:textSize="@dimen/mediumFont"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/textView10"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hotel_address"
                android:textSize="@dimen/smallFontL"
                android:textAlignment="center"/>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:background="@color/grey"
                >
                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="Booking Date"
                    android:background="@color/white"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:textSize="@dimen/mediumFont"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/checkIn_Date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    android:text="20th Feb"
                    android:textAlignment="center"
                    android:textSize="@dimen/mediumFont" />
                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="To"
                    android:layout_marginTop="20dp"
                    android:textSize="@dimen/mediumFont"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/checkOut_Date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    android:text="20th June"
                    android:textAlignment="center"
                    android:textSize="@dimen/mediumFont" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/grey">

                <TextView
                    android:id="@+id/booking_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"

                    android:layout_marginTop="10dp"
                    android:text="@string/date"
                    android:textSize="@dimen/mediumFont" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stay_period"
                    android:textSize="@dimen/mediumFont"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    />

                <TextView
                    android:id="@+id/stay_period"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    android:text="3 Months"
                    android:textSize="@dimen/mediumFont" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_amount"
                    android:textSize="@dimen/mediumFont"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/total_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:text="₹12,000"
                    android:textAlignment="center"
                    android:textSize="@dimen/mediumFont" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/map"
                    android:layout_width="25dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="30dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/googlemap" />

                <TextView
                    android:id="@+id/direction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:text="Directions"
                    android:textAlignment="center"
                    android:textColor="@color/red_trans"
                    android:textSize="@dimen/mediumFont" />

                <ImageView
                    android:id="@+id/call"
                    android:layout_width="25dp"
                    android:layout_height="35dp"

                    android:layout_marginLeft="100dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/phone" />

                <TextView
                    android:id="@+id/call_property"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:text="Call Property"
                    android:textAlignment="center"
                    android:textColor="@color/red_trans"
                    android:textSize="@dimen/mediumFont" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:background="@color/grey">

                <Button
                    android:id="@+id/payNowButton"
                    android:layout_width="260dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:background="#328e19"
                    android:text="PAY NOW"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/largeFont" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:background="@color/grey">

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="260dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:background="@color/red_trans"
                    android:text="Cancel This Booking"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/largeFont" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
